fix search autocomplete wrap
merges ea1e23072aab93e9e7479d25742c9a9d56a4c954

--- a/www/less/header.less
+++ b/www/less/header.less
@@ -243,6 +243,7 @@
 						border: 0;
 					}
 					a {
+					    .clearfix;
 						padding-left: 10px;
 						padding-right: 10px;
 						padding-top: 8px;
@@ -259,6 +260,9 @@
 							color: @khan-blue-light;
 							line-height: 19px;
 							margin-right: 8px;
+							display: block;
+							width: 92%;
+							float: left;
 							strong {
 								font-weight: @font-weight-light;
 								color: @khan-black2;
